kubernetes/applications/anki-card-factory/manifests/anki-card-factory-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: anki-card-factory-service
  namespace: anki-card-factory
spec:
  selector:
    app: anki-card-factory
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
